[package]
name = "ntscan"
version = "0.2.0"
edition = "2024"
authors = ["Aaron Savron <admin@svrnsys.com>"]
description = "Lightning-fast multi-language security scanner"
license = "MIT"
repository = "https://github.com/Aaron-Savron/NTScan"
homepage = "https://github.com/Aaron-Savron/NTScan"
keywords = ["security", "scanner", "static-analysis", "vulnerability", "sast"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.78"

[[bin]]
name = "ntscan"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.25.0"
tree-sitter-c = "0.23.0"
tree-sitter-python = "0.23.0"
tree-sitter-java = "0.23.0"
tree-sitter-javascript = "0.23.0"
memmap2 = "0.9"
rayon = "1.10"
walkdir = "2.5"
regex = "1.11"
clap = { version = "4.5", features = ["derive"] }
ansi_term = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.5"
term_size = "0.3"
indicatif = "0.17"          # Progress bars
notify = "6.1"              # File watching
config = "0.14"             # Config file support
toml = "0.8"                # TOML parsing
chrono = "0.4"              # Timestamps for SARIF
crossterm = "0.28"          # Terminal UI

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
